refactored readme.md file
